add page content

--- a/src/app/pages/ticket/ticket.component.html
+++ b/src/app/pages/ticket/ticket.component.html
@@ -38,3 +38,9 @@
 <app-breadcrumbs [breadcrumbs]="breadcrumbList"></app-breadcrumbs>
 
 <app-page-title [title]="pageTitle.title" [desc]="pageTitle.desc"></app-page-title>
+<app-page>
+    <div class="container">
+        <div class="divider"></div>
+        <app-button [text]="button.text" [icon]="button.icon" class="button"></app-button>
+      </div>
+</app-page>
