--- a/src/app/pages/ticket/ticket.component.css
+++ b/src/app/pages/ticket/ticket.component.css
@@ -62,3 +62,14 @@
     width: 26px;
     padding-top: 5px;
   }
+  .container {
+    display: flex; /* Flexbox for horizontal layout */
+    align-items: flex-end; /* Align items to the bottom */
+  }
+
+  .divider {
+    flex-grow: 1;
+    border-bottom: 3px solid #D2D6DB;
+    margin-left: 50px;
+    border-radius: 7px;
+  }
